# storage/api-docs/api-docs.json
@@ -63,6 +63,362 @@
                 ]
             }
         },
+        "/": {
+            "get": {
+                "tags": [
+                    "Condominium"
+                ],
+                "summary": "Lists available Condominiums",
+                "description": "Gets all available Condominiums resources",
+                "operationId": "App\\Http\\Controllers\\CondominiumsController::index",
+                "parameters": [
+                    {
+                        "name": "paginate",
+                        "in": "query",
+                        "description": "paginate",
+                        "required": false,
+                        "schema": {
+                            "title": "Paginate",
+                            "description": "The unique identifier of a Condominium resource",
+                            "type": "boolean",
+                            "example": "true"
+                        }
+                    },
+                    {
+                        "name": "dataSearch",
+                        "in": "query",
+                        "description": "Condominium resource name",
+                        "required": false,
+                        "schema": {
+                            "description": "The unique identifier of a Condominium resource",
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "sortField",
+                        "in": "query",
+                        "description": "Sort field",
+                        "required": false,
+                        "schema": {
+                            "title": "name",
+                            "description": "The unique identifier of a Condominium resource",
+                            "type": "string",
+                            "example": "name"
+                        }
+                    },
+                    {
+                        "name": "sortOrder",
+                        "in": "query",
+                        "description": "Sort order field",
+                        "schema": {
+                            "title": "sortOrder",
+                            "description": "The unique identifier of a Condominium resource",
+                            "type": "string",
+                            "example": "asc"
+                        }
+                    },
+                    {
+                        "name": "perPage",
+                        "in": "query",
+                        "description": "Sort order field",
+                        "schema": {
+                            "title": "perPage",
+                            "description": "The unique identifier of a Condominiums resource",
+                            "type": "number",
+                            "default": "0"
+                        }
+                    },
+                    {
+                        "name": "authorization",
+                        "in": "header",
+                        "description": "authorization",
+                        "schema": {
+                            "title": "authorization",
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "A list with Condominiums",
+                        "headers": {
+                            "X-Auth-Token": {
+                                "description": "calls per hour allowed by the user",
+                                "schema": {
+                                    "type": "integer",
+                                    "format": "int32"
+                                }
+                            }
+                        },
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated.",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "default": {
+                        "description": "an \"unexpected\" error",
+                        "content": {
+                            "application/json": {}
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "passport": [
+                            "*"
+                        ]
+                    }
+                ]
+            },
+            "post": {
+                "tags": [
+                    "Condominium"
+                ],
+                "summary": "Creates a new Condominium",
+                "description": "Creates a new Condominium",
+                "operationId": "App\\Http\\Controllers\\CondominiumsController::store",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/Condominium"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "The Condominium resource created",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated.",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "default": {
+                        "description": "an \"unexpected\" error",
+                        "content": {
+                            "application/json": {}
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "passport": [
+                            "*"
+                        ]
+                    }
+                ]
+            }
+        },
+        "/{condominium_id}": {
+            "get": {
+                "tags": [
+                    "Condominium"
+                ],
+                "summary": "Gets a Condominium resource",
+                "description": "Gets a Condominium resource",
+                "operationId": "App\\Http\\Controllers\\CondominiumsController::show",
+                "parameters": [
+                    {
+                        "name": "condominium_id",
+                        "in": "path",
+                        "description": "The Condominium resource condominium_id",
+                        "required": true,
+                        "schema": {
+                            "description": "The unique identifier of a Condominium resource",
+                            "type": "number"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "The resource has been deleted",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated.",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "default": {
+                        "description": "an \"unexpected\" error",
+                        "content": {
+                            "application/json": {}
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "passport": [
+                            "*"
+                        ]
+                    }
+                ]
+            },
+            "put": {
+                "tags": [
+                    "Condominium"
+                ],
+                "summary": "Updates a Users resource",
+                "description": "Updates a Users resource by the condominium_id",
+                "operationId": "App\\Http\\Controllers\\CondominiumsController::update",
+                "parameters": [
+                    {
+                        "name": "condominium_id",
+                        "in": "path",
+                        "description": "User resource id",
+                        "required": true,
+                        "schema": {
+                            "description": "The unique identifier of a User resource",
+                            "type": "string"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/Condominium"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "The Condominium resource updated",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated.",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "default": {
+                        "description": "an \"unexpected\" error",
+                        "content": {
+                            "application/json": {}
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "passport": [
+                            "*"
+                        ]
+                    }
+                ]
+            },
+            "delete": {
+                "tags": [
+                    "Condominium"
+                ],
+                "summary": "Removes a Condominium resource",
+                "description": "Removes a Condominium resource",
+                "operationId": "App\\Http\\Controllers\\CondominiumsController::destroy",
+                "parameters": [
+                    {
+                        "name": "condominium_id",
+                        "in": "path",
+                        "description": "The Condominium resource condominium_id",
+                        "required": true,
+                        "schema": {
+                            "description": "The unique identifier of a Condominium resource",
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "The resource has been deleted",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated.",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "default": {
+                        "description": "an \"unexpected\" error",
+                        "content": {
+                            "application/json": {}
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "passport": [
+                            "*"
+                        ]
+                    }
+                ]
+            },
+            "patch": {
+                "tags": [
+                    "Condominium"
+                ],
+                "summary": "Restore a Condominium resource",
+                "description": "Restore a Condominium resource",
+                "operationId": "App\\Http\\Controllers\\CondominiumsController::restore",
+                "parameters": [
+                    {
+                        "name": "condominium_id",
+                        "in": "path",
+                        "description": "The Condominium resource condominium_id",
+                        "required": true,
+                        "schema": {
+                            "description": "The unique identifier of a Condominium resource",
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "The resource has been deleted",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated.",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "default": {
+                        "description": "an \"unexpected\" error",
+                        "content": {
+                            "application/json": {}
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "passport": [
+                            "*"
+                        ]
+                    }
+                ]
+            }
+        },
         "/users": {
             "get": {
                 "tags": [
@@ -422,6 +778,67 @@
     },
     "components": {
         "schemas": {
+            "Condominium": {
+                "properties": {
+                    "name": {
+                        "description": "The Condominium name",
+                        "required": [
+                            "true"
+                        ],
+                        "type": "string"
+                    },
+                    "last_name": {
+                        "description": "The Condominium last_name",
+                        "required": [
+                            "true"
+                        ],
+                        "type": "string"
+                    },
+                    "phone": {
+                        "description": "The Condominium phone",
+                        "required": [
+                            "true"
+                        ],
+                        "type": "string"
+                    },
+                    "email": {
+                        "description": "The Condominium email",
+                        "required": [
+                            "true"
+                        ],
+                        "type": "string"
+                    },
+                    "type_condominium": {
+                        "description": "The Condominium type_condominium",
+                        "required": [
+                            "true"
+                        ],
+                        "type": "string"
+                    },
+                    "active_indicator": {
+                        "description": "The Condominium active_indicator",
+                        "required": [
+                            "true"
+                        ],
+                        "type": "string"
+                    },
+                    "create_by": {
+                        "description": "The Condominium create_by",
+                        "required": [
+                            "true"
+                        ],
+                        "type": "string"
+                    },
+                    "update_by": {
+                        "description": "The Condominium update_by",
+                        "required": [
+                            "true"
+                        ],
+                        "type": "string"
+                    }
+                },
+                "type": "object"
+            },
             "Login": {
                 "properties": {
                     "email": {
